--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     }
 
     header h1 {
+      color: black;
       margin: 0;
       font-size: 3rem;
       font-family: 'Courier New', Courier, monospace;
