--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="website icon" type="png" href="https://github.com/Hasan449505/HSFWEBDEVELOPERS/blob/main/WhatsApp%20Image%202025-02-19%20at%207.22.50%20PM.jpeg">
+  <link rel="website icon" type="png" href="WhatsApp Image 2025-02-19 at 7.22.50 PM.jpeg">
   <title>HSF WEB BUILDERS</title>
   <style>
     body {
