--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     /* Header */
     header {
-      background: url('HSF .jpg') center center/cover no-repeat;
+      background: url('') center center/cover no-repeat;
       color: white;
       padding: 80px 40px;
       text-align: center;
