--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       font-family: 'Arial', sans-serif;
       line-height: 1.6;
-      color: #333;
+      color: white;
       overflow-x: hidden;
       background-color: #f4f4f4;
     }
