--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
       margin-bottom: 15px;
       font-size: 1.8rem;
       font-weight: bold;
-      color: #5a5a5a;
+      color: black;
     }
 
     .service p {
       font-size: 1.2rem;
-      color: #777;
+      color: black;
       font-style: italic;
     }
 
